--- a/senshu_map.css
+++ b/senshu_map.css
@@ -11,6 +11,8 @@ body {
 	position: relative;
 	height: 100svh;
 	overflow: hidden;
+	user-select: none;
+	touch-action: none;
 }
 
 #toplogo {
@@ -394,6 +396,11 @@ canvas {
 	white-space: nowrap;
 }
 
+[data-priority="3"],
+[data-priority="2"] {
+	display: none;
+}
+
 .building.destinationName {
 	background-color: #EFF8FE;
 	padding: 4px;
@@ -560,7 +567,16 @@ canvas {
 	z-index: 0;
 }
 
-
+#loading {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	display: block;
+	background-color: #D9D9D9;
+	z-index: 2;
+	top: 0px;
+	left: 0px;
+}
 
 .nav_item {
 	accent-color: #117132;
