--- a/senshu_map.css
+++ b/senshu_map.css
@@ -438,7 +438,7 @@ canvas {
 }
 
 .hidden {
-	display: none;
+	display: none !important;
 }
 
 #mapNav {
@@ -568,16 +568,65 @@ canvas {
 }
 
 #loading {
+	display: flex;
+	align-items: center;
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	display: block;
 	background-color: #D9D9D9;
 	z-index: 2;
 	top: 0px;
 	left: 0px;
 }
 
+#loading .content {
+	width: 100%;
+}
+
+#loading img {
+	display: block;
+	margin-inline: auto;
+	height: 100px;
+	animation: floating 2s ease-in-out infinite alternate-reverse;
+}
+
+#loadingText {
+	text-align: center;
+	margin-top: 1rem;
+}
+
+#loadingText::after {
+	content: "";
+	animation: dotted 2s linear infinite;
+}
+
 .nav_item {
 	accent-color: #117132;
+}
+
+@keyframes dotted {
+	0% {
+		content: "";
+	}
+	25% {
+		content: ".";
+	}
+	50% {
+		content: "..";
+	}
+	75% {
+		content: "...";
+	}
+	100% {
+		content: "";
+	}
+}
+
+@keyframes floating {
+	0% {
+		transform: translateY(5%);
+	}
+	100% {
+		transform: translateY(-15%);
+	}
 }
